# OsuSpinner

./: CMakeLists.txt  README.md  main.cpp
include/: input.h  shape.h
src/: input.cpp  shape.cpp
